--- a/weiming-frontend/src/client/common/layouts.scss
+++ b/weiming-frontend/src/client/common/layouts.scss
@@ -2,3 +2,4 @@
 @import './layouts/layoutWidth.scss';
 @import './layouts/oneColumn.scss';
 @import './layouts/twoColumnFixedWidth.scss';
+@import './layouts/containerLayouts.scss';
