--- a/weiming-frontend/src/client/pages/users/usersPage.scss
+++ b/weiming-frontend/src/client/pages/users/usersPage.scss
@@ -1,9 +1,12 @@
 @import '../../common/colors.scss';
 
 .usersPage-link {
-    margin-top: 0.5rem;
-    padding: 0.75rem;
     color: $blue;
+}
+
+.usersPage-paragraph.usersPage-paragraph {
+    padding: 0.5rem 0.75rem;
+    margin: 0rem;
 }
 
 .usersPage > form {
